compiler/tests/template/success/random.jazz
// we cannot pass a literal to randombytes
// should we catch it earlier? pretyping?
export fn main () -> reg u8 {
  stack u8[1] s;
  reg u64 len = 1;
  s = #randombytes{1}(s, len);
  reg u8 res = s[0];
  return res;
}
